# tracing-actix-web

./: Cargo.toml  README.md
.github/workflows/: general.yml
examples/custom-root-span/: Cargo.toml
examples/custom-root-span/src/: main.rs
examples/opentelemetry/: Cargo.toml  README.md
examples/opentelemetry/src/: main.rs
examples/relay/: Cargo.toml  README.md  build.rs
examples/relay/proto/: service.proto
examples/relay/src/: domain.rs  facade.rs  init.rs  microservice.rs  protocol.rs
examples/request-id-response-header/src/: main.rs
src/: lib.rs  middleware.rs  otel.rs  request_id.rs  root_span.rs  root_span_builder.rs  root_span_macro.rs
src/relay/: interceptor.rs  middleware.rs  mod.rs  service.rs
