[package]
name = "otel"
version = "0.1.0"
authors = ["Luca Palmieri <rust@lpalmieri.com>"]
edition = "2018"

license = "MIT/Apache-2.0"

[dependencies]
actix-web = "4"
tracing = "0.1.19"
opentelemetry = "0.24"
opentelemetry-otlp = { version = "0.17" }
tracing-opentelemetry = { version = "0.25" }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-actix-web = { path = "../..", features = ["opentelemetry_0_24"] }
